Revert "Minor changes"
This reverts commit 0c063474a6231906de287932d8e2a18f4e48fdc7.

--- a/MusicVisualizer/index.html
+++ b/MusicVisualizer/index.html
@@ -9,8 +9,13 @@
 		<p>Alan Walker - Fade</p>
 		<audio id="audioElement" src="audio/Fade.mp3" controls="true"></audio>
 		<div>
+
+			<!-- <button onclick="document.getElementById('audioElement').play()">Play the Audio</button>
+	    	<button onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
+	    	<button onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
+	    	<button onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button> -->
 		</div>
-		<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	    <script src="app.js"></script>
 	</body>
