--- a/MusicVisualizer/index.html
+++ b/MusicVisualizer/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Music Visualizer</title>
+
+		<link href="main.css" rel="stylesheet">
 	</head>
 	<body>
 		<p>Alan Walker - Fade</p>
